--- a/technique/d3f:DynamicAnalysis/index.html
+++ b/technique/d3f:DynamicAnalysis/index.html
@@ -102,7 +102,7 @@
 </ul>
 <h2>Implementations</h2>
 <ul>
-<li><a href="https://cuckoosandbox.org">Cuckoo Sandbox</a></li>
+<li>Cuckoo Sandbox</li>
 </ul>
 <!-- HTML_TAG_END --></div></div></div> <div class="external-html">
         loading...
